Fixed pom final name